--- a/contact.html
+++ b/contact.html
@@ -104,11 +104,11 @@
         <div class="container">
             <p>© 2025 The Fruitful Branch Family. All Rights Reserved.</p>
             <div class="footer-links">
-                <a href="https://wa.me/+234XXXXXXXXXX" target="_blank" aria-label="Chat with us on WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://tiktok.com/@fruitfulbranch" target="_blank" aria-label="Follow us on TikTok"><i class="fab fa-tiktok"></i></a>
-                <a href="https://youtube.com/@fruitfulbranch" target="_blank" aria-label="Watch us on YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="https://wa.me/+2349020229248" target="_blank" aria-label="Chat with us on WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://tiktok.com/@godsguidedickson" target="_blank" aria-label="Follow us on TikTok"><i class="fab fa-tiktok"></i></a>
+                <a href="https://youtube.com/@TheFruitfulBranch" target="_blank" aria-label="Watch us on YouTube"><i class="fab fa-youtube"></i></a>
             </div>
-            <p class="footer-contact">Contact: <a href="mailto:info@fruitfulbranchfamily.org">info@fruitfulbranchfamily.org</a> | +234XXXXXXXXXX</p>
+            <p class="footer-contact">Contact: <a href="mailto: fruitfulbranchmission@gmail.com">info@fruitfulbranchfamily.org</a> | +234XXXXXXXXXX</p>
         </div>
     </footer>
     <script src="./js/jquery.min.js"></script>
