--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="./Fbf/logo.png" alt="The Fruitful Branch Family Logo" class="logo-img mr-2">
+                    <img src="./assets/images/logo.webp" alt="The Fruitful Branch Family Logo" class="logo-img mr-2">
                     <span>The Fruitful Branch Family</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
